# lightjar

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml
lightjar/: Makefile  lightjar.py  pyproject.toml
lightjar/conf/: conf.yaml
lightjar/lib/: conf.py  gamma_correct.py  utils.py
lightjar/tests/: test_gamma_correct.py  test_lightjar.py
