[tool.poetry]
name = "lightjar"
version = "0.1.0"
description = "Jar full of lights"
authors = ["pikesley"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask-API = "^2.0"
PyYAML = "^5.3.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest-random-order = "^1.0.4"
mock = "^4.0.2"
ipdb = "^0.13.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
